fixing buttons on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3417,12 +3417,40 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#nav {
-				display: none;
+				width: calc(100% - 4em);
+				max-width: calc(100% - 4em);
+				padding: 0.65em 0.5em;
 			}
 
-				#nav + #main {
-					padding-top: 0;
+				#nav ul {
+					display: -moz-flex;
+					display: -webkit-flex;
+					display: -ms-flex;
+					display: flex;
+					-moz-flex-wrap: wrap;
+					-webkit-flex-wrap: wrap;
+					-ms-flex-wrap: wrap;
+					flex-wrap: wrap;
+					-moz-justify-content: center;
+					-webkit-justify-content: center;
+					-ms-justify-content: center;
+					justify-content: center;
+					-moz-align-items: center;
+					-webkit-align-items: center;
+					-ms-align-items: center;
+					align-items: center;
 				}
+
+					#nav ul li {
+						margin: 0.25em 0.2em;
+					}
+
+						#nav ul li a {
+							font-size: 0.9em;
+							padding: 0 0.85em;
+							height: 2.1em;
+							line-height: 2.1em;
+						}
 
 		}
 
